force-app/main/default/objects/Brick_Territory_Alignment__c/Brick_Territory_Alignment__c.object-meta.xml
<CustomObject>
    <description>Many-to-many alignment of IMS bricks to Position (MR) territories, including share.</description>
    <label>Brick Territory Alignment</label>
    <nameField>
        <displayFormat>BTA-{00000}</displayFormat>
        <label>Brick Territory Alignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brick Territory Alignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>