force-app/main/default/objects/Brick_Territory_Alignment__c/fields/Brick__c.field-meta.xml
<CustomField>
    <fullName>Brick__c</fullName>
    <label>Brick</label>
    <referenceTo>Brick__c</referenceTo>
    <relationshipLabel>Territory Alignments</relationshipLabel>
    <relationshipName>Territory_Alignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>