force-app/main/default/objects/Brick_Territory_Alignment__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Composite upsert key: {brickExtId}|{posExtId}.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>