force-app/main/default/objects/Brick_Territory_Alignment__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <description>Fraction of the brick allocated to this Position (1.0 = full, 0.5 = half).</description>
    <label>Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>