force-app/main/default/objects/Brick_Territory_Alignment__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <description>18-character Territory2 Id of the Position (MR) territory.</description>
    <inlineHelpText>Enter the 18-character Territory2 record Id from Territory Management.</inlineHelpText>
    <label>Territory2 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>