force-app/main/default/objects/Brick_Territory_Alignment__c/fields/Territory_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_External_ID__c</fullName>
    <description>Position territory external id (TERR_POS_*) used during organogram upsert before Salesforce Id resolve.</description>
    <label>Territory External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>